# cfdARCO

./: .gitignore  cfd.py  cfd2.py  equation.py  heat_exchange.py  shallow_water.py  wave.py
cfdARCO/: .gitignore  CMakeLists.txt  baks.bak  main.cpp  report_cuda_history.csv  report_cuda_multi_gpu_history.csv  report_per_nodes_full.csv  rmm_log.txt
cfdARCO/examples/: main.cpp  main.cpp.baaaaak  main_heat.cpp  main_instability.cpp  main_shallow_water.cpp
cfdARCO/examples/wave_eq/: acoustic.cpp  acoustic_px_py.cpp  elastic.cpp  elastic_second_order.cpp
cfdARCO/include/: abstract_mesh.hpp  cfdarcho_main.hpp  cuda_operators.hpp  decls.hpp  distribution_algo.hpp  eigen_holder.hpp  fvm.hpp  io_operators.hpp  mesh2d.hpp  pool_allocator.hpp  utils.hpp  val_utils.hpp
cfdARCO/reports/: report_cuda.py  report_cuda_1_proc.csv  report_cuda_2_proc.csv  report_cuda_full.csv  report_cuda_full.py  report_cuda_multi_gpu_history.csv  report_cuda_multigpu_full.py  report_distribution_compare_aws.csv  report_distribution_compare_my_pc.csv  report_main.py  report_main_2_vms_aws.csv  report_main_full.py  report_main_my_pc.csv  report_main_my_pc_16_proc.csv  report_main_my_pc_16_proc_smaller_mesh.csv  report_per_nodes.csv  report_per_nodes_8_meshines_aws.csv  report_per_nodes_full_before.csv  report_per_nodes_full_strange.csv
cfdARCO/scripts/: basic_visualizer.py  compare_openfoan_cfdarcho_laplacian.py  heatmap.py  heatmap_openfoam.py  shallow_water.py  streamplot_u_v.py  streamplot_u_v_openfoam.py  test_cuda_execution.py  test_cuda_multigpu_execution.py  test_distribution_compare.py  test_parallel_execution.py  test_parallel_onnodes_execution.py  visualize_mesh.py  visualize_variable_mesh.py  wave.py  wave_elastic.py
cfdARCO/src/: cfdarcho_main.cpp  cuda_operators.cu  distribution_algo.cpp  fvm.cpp  io_operators.cpp  main.cpp  main.cpp.bakbak  main_inference.cpp  main_instability.cpp  main_wave.cpp  mesh2d.cpp  pool_allocator.cpp  utils.cpp  val_utils.cpp
fvm/: cfd.py  cfd2.py  cfd3.py  cfd4.py  fvm.py  fvm.py.bak  heat_exchange.py  mesh.py  shallo_water.py
